Not Responsive and some bugs

--- a/3.Design_Final_Assignment/layout.css
+++ b/3.Design_Final_Assignment/layout.css
@@ -262,7 +262,7 @@
 	left:-120;
 }
 .SUBSCRIBED{
-	width: 35%;
+	width: 26%;
 	position:relative;
 	margin-left: 50%;
 	top: -900;
